--- a/transfer.ipynb
+++ b/transfer.ipynb
@@ -57,7 +57,7 @@
     "result = run_transfer(content_s, style_s,\n",
     "                      content_weight=1e3, style_weight=1,\n",
     "                      cnn_channels=16, cnn_kernel=(3,3),\n",
-    "                      num_steps=20000\n",
+    "                      learning_rate=.1, num_steps=2000\n",
     "                     )"
    ]
   },
